--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -34,4 +34,4 @@ jobs:
       run: go build -v .
 
     - name: Test
-      run: go test -v ./../../pkg/api/v1/service/
+      run: go test -v ./../../pkg/api/v1/service
