--- a/workflows/label.yml
+++ b/workflows/label.yml
@@ -36,4 +36,4 @@ jobs:
 
       # Run unit tests.
       - name: Run unit tests
-        run: go test -v ./../../pkg/api/v1/service/
+        run: go test -v ./pkg/api/v1/service/
