--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -16,4 +16,4 @@ jobs:
       - uses: actions/labeler@v2
         with:
           repo-token: "${{ secrets.GITHUB_TOKEN }}"
-          CONFIG_PATH: .github/config.yml
+          configuration-path: .github/config.yml
